Revision history for XML-Grammar-Fiction.

0.5.1       Sun May 22 09:33:43 IDT 2011
    * Fix the handling of entities at the start of the opening line of
    paragraphs in the Fiction-Text . See 
    t/fiction/data/proto-text/paras-with-entities-at-start-of-line.txt .

0.5.0       Sat May 21 23:20:43 IDT 2011
    * Add support for the <programinglisting> tag.
    * Fix the handling of the entities ("&amp;" "&#32;" etc.) in Fiction-Text.

0.4.1       Sat May 21 19:45:56 IDT 2011
    * Properly handling whitespace after a closing tag in the Fiction-Text
    proto-text. Like:
        - "</b> foo" should be translated "</b> foo" instead of "</b>foo".

0.4.0       Fri May 20 15:46:18 IDT 2011
    * Updated some of the bug report URLs to read "XML-Grammar-Fiction"
    instead of "XML-Grammar-Screenplay".
    * Add support for the <blockquote> tag to Fiction-XML / Fiction-Text.

0.3.0       Tue May 17 22:59:17 IDT 2011
    * Add extradata/screenplay-xml-to-tei.xslt and 
    lib/XML/Grammar/Screenplay/ToTEI.pm - add tests for them.
        - They convert Screenplay-XML into TEI - Text Encoding Initiative,
        a markup language for digital representation of texts (especially 
        artsy texts such as screenplays, prose or poems) 
            - http://www.tei-c.org/ .
        - This will allow for easier conversion into XSL-FO, as well as many
        other formats.
    * Got rid of the <!DOCTYPE .... > declaration in the Screenplay-XML
    output (it confused the heck out of xsltproc and was not really needed
    as we use a RELAX-NG schema instead of a DTD.)
    * Create lib/XML/Grammar/FictionBase/XSLT/Converter.pm as a base
    class for the converters.
        - removed lib/XML/Grammar/Fiction/RendererBase.pm as it was no
        longer used.
        - Create some sub-classes.

0.2.0       Fri May 13 16:56:00 IDT 2011
    * Add support for <ol>, <li> and <ul> to Fiction-Text and Fiction-XML.

0.1.7       Tue Apr 19 00:55:07 IDT 2011