@@ -1,5 +1,8 @@
 Revision history for XML-Grammar-Fiction.
 
+    * Add the version="5.0" attribute to the top-level tag of the
+    DocBook 5/XML generated by extradata/fiction-xml-to-docbook.xslt .
+    
 0.5.1       Sun May 22 09:33:43 IDT 2011
     * Fix the handling of entities at the start of the opening line of
     paragraphs in the Fiction-Text . See 
